--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<body>
 		<h1>dsfs<h1>
 		<h2>fdsf</h2>
+		<link rel="stylesheet" type="css/bootstrap.min.css" href="">
+		<link rel="stylesheet" href="style.css"
 	</body>
 
 </html>
