--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<body>
 		<h1>dsfs<h1>
 		<h2>fdsf</h2>
-		<link rel="stylesheet" type="css/bootstrap.min.css" href="">
-		<link rel="stylesheet" href="style.css"
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href - "css/bootstrap.min.css" rel - "stylesheet">
+		<link href = "css/style.css" rel = "stylesheet">
 	</body>
 
 </html>
