--- a/index.html
+++ b/index.html
@@ -45,23 +45,16 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="dark">
+                    <hr class="light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Choko meopin han jogak sikyeonoko
-					   Gosohan uyuhanjaneul gidaryeoyo
-					   Oppahago nahago kkok maju anjaseo
-					   Seoro sonbadak wie yeppeun nakseoreul hajyo
+                    <p>insert later
 					</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Hannun paljima nuga mworaedo naekkeo (naekkeo)
-					   Dareun yeojarang maldo seokkjima nan nikkeo (nan nikkeo)
-					   Saekki songarak geolgo kkok yaksokhaejwoyo
-                       Jeoldae na honja naebeoryeo duji ankiro
-					</p>
+                    <p>insert later	</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
