--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Justin Nguyen</title>
+    <title>I Don't Even</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/freelancer.css" rel="stylesheet">
@@ -31,7 +31,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Myonoise</span>
+                        <span class="name">Justin Nguyen</span>
                     </div>
                 </div>
             </div>
