--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Justin Nguyen</span>
+                        <span class="name">Justin Nguyen </span>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                     <p>insert later	</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
+                    <a href="https://github.com/Shintori">
                         		Github                    </a>
                 </div>
             </div>
