--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Justin Nguyen </span>
+                        <span class="name">Justin Nguyen</span>
                     </div>
                 </div>
             </div>
@@ -50,14 +50,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>insert later
+                    <p> twink
 					</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>insert later	</p>
+                    <p>twink
+                        s</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/Shintori">
+                    <a target='_blank' href="https://github.com/Shintori" class="btn btn-lg btn-outline">
                         		Github                    </a>
                 </div>
             </div>
