updated school home page

--- a/konbanwa.html
+++ b/konbanwa.html
@@ -152,7 +152,7 @@
 			<a href="http://reddit.com">front</a>
 			</br>
             <span> <img src="school.png"></span>
-            <a style="padding-left:10px" href="">main</a>
+            <a style="padding-left:10px" href="https://prospect.schoolloop.com/">main</a>
 			<a href="">canvas</a>
 			<form method="get" action="http://www.google.com/search"> <input type="text" placeholder="" value=""
             name="q">
