--- a/konbanwa.html
+++ b/konbanwa.html
@@ -138,8 +138,8 @@
 			<a href="http://deviantart.com">dA</a>
             </br>
             <span> <img src="music.png"></span>
-            <a style="padding-left:10px" href="http://www.last.fm">last.fm</a>
-            <a href="http://bandcamp.com">bandcamp</a>
+            <a style="padding-left:10px" href="http://www.last.fm/user/StevenBonnellII">last.fm (Destiny)</a>
+            <a href="http://www.pandora.com/">pandora</a>
 			<a href="http://soundcloud.com">soundcloud</a>
             </br>
             <span> <img src="mail.png"></span>
