--- a/konbanwa.html
+++ b/konbanwa.html
@@ -136,6 +136,7 @@
             <a href="http://youtube.com">youtube</a>
 			<a href="http://tumblr.com">tumblr</a>
 			<a href="http://deviantart.com">dA</a>
+			<a href="http://store.steampowered.com/">steam</a>
             </br>
             <span> <img src="music.png"></span>
             <a style="padding-left:10px" href="http://www.last.fm/user/StevenBonnellII">last.fm (Destiny)</a>
@@ -153,7 +154,7 @@
 			</br>
             <span> <img src="school.png"></span>
             <a style="padding-left:10px" href="https://prospect.schoolloop.com/">school loop(prospect)</a>
-			<a href="">canvas</a>
+			<a href="https://github.com/">github</a>
 			<form method="get" action="http://www.google.com/search"> <input type="text" placeholder="" value=""
             name="q">
            
