--- a/konbanwa.html
+++ b/konbanwa.html
@@ -137,6 +137,7 @@
 			<a href="http://tumblr.com">tumblr</a>
 			<a href="http://deviantart.com">dA</a>
 			<a href="http://store.steampowered.com/">steam</a>
+			<a href="https://osu.ppy.sh/">osu</a>
             </br>
             <span> <img src="music.png"></span>
             <a style="padding-left:10px" href="http://www.last.fm/user/StevenBonnellII">last.fm (Destiny)</a>
