update 4chan wsg

--- a/konbanwa.html
+++ b/konbanwa.html
@@ -130,6 +130,7 @@
             <a href="http://boards.4chan.org/g/">tech</a>
             <a href="http://boards.4chan.org/a/">anime</a>
             <a href="http://boards.4chan.org/mu/">music</a>
+            <a href="http://boards.4chan.org/wsg/">wsg</a>
             </br>
             <span> <img src="social.png"></span>
             <a style="padding-left:10px" href="https://www.facebook.com">facebook</a>
