--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <h1>Johnny's hot new ablum</h1>
   <img src="super.jpg"  
-   <source src="lol">
+   <audio controls autoplay>
+  <source src="lol.mp3f" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
+
   
   
   
