--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <h1>Johnny's hot new ablum</h1>
   <img src="super.jpg"  
-   <audio controls autoplay>
-  <source src="lol.mp3f" type="audio/mpeg">
+  <audio controls autoplay>
+    <source src="lol.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
   </audio>
 
