--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <h1>Johnny's hot new ablum</h1>
   <img src="super.jpg"  
-  <audio controls autoplay>
-    <source src="lol.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio>
+  <audio src="lol.mp3" autoplay>
+<p>If you are reading this, it is because your browser does not support the audio element.     </p>
+<embed src="lol.mp3" width="180" height="90" hidden="true" />
+</audio>
 
   
   
