--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<<<<<<< HEAD
 <!doctype html> 
 
 <html>
+    
 <head>
-<title>FreshBeAts</title>
+<title>Terraria Ramen Saves</title>
 </head>
 
 <body>
 
- <h1>Johnny's hot new ablum</h1>
-  <img src="super.jpg"  
-</body>
-<audio src="lol.mp3" autoplay>
-<p>If you are reading this, it is because your browser does not support the audio element.     </p>
-<embed src="lol.mp3" width="180" height="90" hidden="true" />
-</audio>
+ <h1>saves</h1>
+ <p>only works when im online (when my macbook is connected to the internet)</p>
+ <p>download both of them!</p>    
+ <a href="~/Library/Application Support/Terraria/Worlds/Ramen.wld.bak" download> 
+
 
 </html>
