--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 
  <h1>saves</h1>
- <p>only works when im online (when my macbook is connected to the internet)</p>
+ <p>saves gets update after each session</p>
  <p>download both of them!</p>    
- <a href="~/Library/Application Support/Terraria/Worlds/Ramen.wld.bak" download> 
+ <a href="/saves/Ramen.wld" First> 
+ <a href="/saves/Ramen.wld.bak" Second> 
 
 
 </html>
