--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
  <h1>saves</h1>
  <p>saves gets update after each session</p>
  <p>download both of them!</p>    
- <a> href="http://shintori.github.io/saves/Ramen.wld" download></a>
- <a> href="http://shintori.github.io/saves/Ramen.wld.bak" download></a> 
+ <a> href="http://shintori.github.io/saves/Ramen.wld" download</a>
+ <a> href="http://shintori.github.io/saves/Ramen.wld.bak" download</a> 
 
 
 </html>
