--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
  <h1>saves</h1>
  <p>saves gets update after each session</p>
  <p>download both of them!</p>    
- <a href="http://shintori.github.io/saves/Ramen.wld" download</a>
- <a href="http://shintori.github.io/saves/Ramen.wld.bak" download</a> 
- <a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a>
-
+ <a href="http://shintori.github.io/saves/Ramen.wld.bak">ramen.wld.bak</a>
+ <a href="http://shintori.github.io/saves/Ramen.wld">ramen.wld</a
 
 </html>
